# homebase-2.0

./: .env.example  .gitignore  README.md  command_bot.js  ecosystem.config.js  index.html  index.js  package.json  pnpm-lock.yaml
homebase-portfolio/: .env.example  .env.local  .env.production  .env.staging  .firebaserc  .geminiignore  .gitignore  README.md  SYNC.md  TERMUX.md  deploy-termux.sh  eslint.config.js  firestore.rules  index.html  manifest.webmanifest  optimize.sh  package-lock.json  package.json  termux-setup.sh  test-groq.cjs  vite.config.js  work_alias.sh
homebase-portfolio/.trae/: rules
homebase-portfolio/functions/: package-lock.json  package.json
homebase-portfolio/src/: App.jsx  index.css  types.ts
projects/L1T_GRID/: index.html
projects/LitreeLabsFirebase/: .env.docker  .eslintignore  .firebaserc  .gitattributes  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_ANALYTICS_MCP_SETUP.md  LITLABS_OS_QUICK_START.md  LITLAB_ULTRA_GUIDE.md  LitLabs.code-workspace  MASTER_SETUP.ps1  MCP_MARKETPLACE_SUBMISSION.md  SECURITY.md  SECURITY_CHECKLIST.md  SETUP_FINAL.ps1  VOICE_SYSTEM_README.md  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.json  tsconfig.tsbuildinfo
projects/azuredev-5d2f/: start-dev.bat
projects/homebase-main-litlabsai/: .gitignore  .greptile.yml  AGENTS.md  (+53 more)
projects/litrelab/litreelab-backend/: Dockerfile.backend  Dockerfile.backend.dev  main.py  pyproject.toml
projects/overlord-pc-dashboard/overlord-dashboard/: Untitled-1.json  comet-sync-code.txt  config.py  config.yaml  index.html  pyproject.toml  requirements-new.txt  requirements.txt  server.py
projects/overlord-pc-dashboard/overlord-dashboard/components/: OverlordStatus.jsx
projects/overlord-pc-dashboard/overlord-dashboard/dashboard/: .gitignore  Dockerfile  Setup-Syncthing-Windows.ps1  check-remote-status.ps1  cleanup-vscode.ps1  config.yaml  deploy-firebase.ps1  dev-watch.ps1  dev.ps1  dev.sh  firebase.json  fix-vision-board.sh  index_v2.html  launcher.ps1  launcher.py  launcher.sh  lit-grid-v11.5.html  overlord-dashboard.service  overlord-engine-bridge.py  pyproject.toml  realdebrid_controller.js  requirements.txt  server.py  setup.ps1  setup.sh  start-all-servers.ps1  start-dashboard-pro.sh  start-remote-access.ps1  start.ps1  start.sh  status-dashboard.sh  stop-dashboard.sh  style.css  sync.sh  telegram_overlord_bot.py
projects/overlord-pc-dashboard/overlord-dashboard/dashboard/js/: Recharts.js  react-dom.production.min.js
projects/overlord-pc-dashboard/overlord-dashboard/dashboard/tests/: conftest.py  test_server.py
projects/overlord-pc-dashboard/overlord-dashboard/js/: prop-types.min.js  react.production.min.js
projects/overlord-pc-dashboard/overlord-dashboard/middleware/: health.js
projects/overlord-pc-dashboard/overlord-dashboard/static/: config.json
projects/overlord-pc-dashboard/overlord-dashboard/watchdog/: control.ps1  firebase-rules.json  heartbeat.ps1  overlord-watchtower.sh
telegram-bot/: .env.example  .gitignore  README.md  ecosystem.config.js  index.js  package.json
(+3394 files in other folders)
